--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mammoth": "^1.10.0",
     "multer": "^2.0.0",
     "nodemon": "^3.1.11",
     "openai": "^4.73.1",
